<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_custom_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_arrow_back_white_24dp" />

        <TextView
            android:id="@+id/tv_custom_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="20dp"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_device_name"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="15dp"
            android:layout_toEndOf="@+id/tv_device_name"
            android:background="@drawable/custom_edittext_background"
            android:padding="5dp"
            android:textSize="14sp" />

        <!-- 设备名称和设备用途的分隔符-->
        <View
            android:id="@+id/divide_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/et_device_name"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/tv_function"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divide_1"
            android:layout_alignParentStart="true"
            android:layout_margin="20dp"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divide_1"
            android:layout_toEndOf="@+id/tv_function">

            <RadioButton
                android:id="@+id/rb_first_aid"
                style="@style/radiobuttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:checked="true"
                android:text="@string/first_aid"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_hardware"
                style="@style/radiobuttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/hardware"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_study"
                style="@style/radiobuttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/study"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_available_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio_group"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/available_services"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/linear_server"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/tv_available_services"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/location"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/message"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_alarm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/alarm"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_customize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_server"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/customize_data"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/linear_data"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/tv_customize"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_latitude"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="经度"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_longitude"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="纬度"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_add_data"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="6dp"
                android:src="@drawable/add_blue"
                android:text="@string/alarm"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_agree"
            style="@style/checkboxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_cancel"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:checked="true"
            android:padding="16dp"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="126dp"
            android:layout_height="46dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:background="@drawable/custom_btn"
            android:text="@string/cancel"
            android:textColor="@color/color_button_state"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="126dp"
            android:layout_height="46dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="30dp"
            android:background="@drawable/custom_btn"
            android:backgroundTint="@color/color_button_state"
            android:text="@string/commit"
            android:textColor="#FFFF"
            android:textSize="14sp" />

    </RelativeLayout>

</LinearLayout>